--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
       <div class="loader"></div>
     </div>
 
-    <div class="meta">Auto-refresh every 20 seconds</div>
+    <div class="meta">Auto-update every 20 seconds</div>
+    <div class="meta">Please dont refresh the page until you want to logout from your current session.</div>
     <div class="links">
       <a href="https://discord.gg/" target="_blank">
         <img src="https://img.icons8.com/?size=100&id=86955&format=png&color=000000" alt="Discord" />
@@ -252,7 +253,7 @@
         document.getElementById("tokenBox").style.display = "none";
         const indicator = document.getElementById("tokenIndicator");
         indicator.style.display = "flex";
-        indicator.innerHTML = `Logged in ✅ | Token: ${TOKEN.slice(0,4)}...${TOKEN.slice(-4)} <button onclick=\"removeToken()\">Change / Remove</button>`;
+        indicator.innerHTML = `Logged in ✅ | Token: ${TOKEN.slice(0,4)}...${TOKEN.slice(-4)} <button onclick=\"removeToken()\">Change your Token.</button>`;
         fetchInfo();
       } else {
         alert("Enter valid token");
